// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SceneSectionExpansionPrompt golden > leaves optional blocks out for the generic variant 1`] = `
{
  "system": "장면의 뼈대 가운데 [이번 구간]만 완성된 소설 본문으로 살을 붙여라.
뼈대에 적힌 사건·대사·등장 순서는 하나도 바꾸지 마라. 사건을 더하거나 빼지 말고, 뼈대에 없는 인물을 등장시키지 마라.
뼈대의 따옴표 대사는 그대로 살리되, 그 사이를 감각 묘사·행동·내면으로 채워 장면을 완성하라.
[장면 전체 뼈대]는 앞뒤 맥락을 알기 위한 참고다. 이번 구간 밖의 사건은 쓰지 마라.
[직전 구간]이 있으면 그 문체와 호흡을 이어받고, 이미 묘사된 공간·인물을 다시 소개하지 마라.
뼈대에 단독 줄로 --- 가 있으면 장면 전환 표시이므로 위치와 형태를 그대로 유지하라.
이번 구간의 목표 분량: 약 800자 (공백 포함).
분량은 사건 사이의 감각·행동·내면으로만 채워라. 이미 쓴 대사·행동·문장을 되풀이해 채우지 마라. 채울 재료가 없으면 목표에 못 미친 채 끝내는 쪽이 낫다.
설명이나 머리말 없이 완성된 본문만 한국어로 출력하라.
서술은 과거형으로 쓰고 한 장면 안에서 시제를 섞지 마라. 대사 안의 시제는 인물의 말이므로 예외다.
대사는 곡선 큰따옴표(“ ”)로 감싸라. 직선 따옴표나 다른 기호로 대신하지 마라.
대사나 행동으로 이미 드러난 감정·의미를 뒤이은 서술로 다시 설명하지 마라. 해석은 독자 몫으로 남겨라.
같은 심상·소재(예: 흐릿한 길, 문틈)는 물론 같은 대사·후렴구·문장도 장면 전체에서 3회를 넘겨 반복하지 마라.
다음 상투 표현은 쓰지 말고 그 인물만의 구체적 반응으로 대체하라: 어깨가 떨렸다, 눈물이 뺨을 타고 흘렀다, 이를 악물었다, 눈썹이 떨렸다, 입술을 깨물었다, 심장이 내려앉았다.
위로하거나 조언하는 인물도 자기 목적이나 결점을 최소 한 번 드러내라. 조언만 하는 장치가 되지 않게 하라.
동작·전투·추격 대목은 무엇이 무엇을 어떻게 했는지 한 번에 읽히게 써라. 한 동작과 그 결과를 붙여 쓰고, 회상이나 비유로 동작 사이를 끊지 마라.
동시에 그 대목을 건조한 중계로 만들지 마라. 이 합에서 무엇이 걸려 있는지, 빗나가면 무엇을 잃는지 시점 인물의 몸이 먼저 알아채게 하고, 상대의 반응과 판단이 바뀌는 순간을 놓치지 마라. 승패를 가른 한 수는 그것이 왜 통했는지까지 드러나야 한다.
장면 전체의 밀도를 일정하게 유지하지 마라. 위기가 조여드는 대목은 문장을 짧게 끊어 호흡을 몰고, 인물이 머무르거나 정서가 쌓이는 대목에서는 묘사를 두텁게 하라. 문장 길이의 완급 자체가 긴장을 만든다.",
  "user": "[장면 전체 뼈대]
뼈대

[이번 구간 — 이 부분만 확장하라]
구간",
}
`;

exports[`SceneSectionExpansionPrompt golden > leaves optional blocks out for the generic variant 2`] = `
{
  "system": "장면의 뼈대 가운데 [이번 구간]만 완성된 소설 본문으로 살을 붙여라.
뼈대에 적힌 사건·대사·등장 순서는 하나도 바꾸지 마라. 사건을 더하거나 빼지 말고, 뼈대에 없는 인물을 등장시키지 마라.
뼈대의 따옴표 대사는 그대로 살리되, 그 사이를 감각 묘사·행동·내면으로 채워 장면을 완성하라.
[장면 전체 뼈대]는 앞뒤 맥락을 알기 위한 참고다. 이번 구간 밖의 사건은 쓰지 마라.
[직전 구간]이 있으면 그 문체와 호흡을 이어받고, 이미 묘사된 공간·인물을 다시 소개하지 마라.
뼈대에 단독 줄로 --- 가 있으면 장면 전환 표시이므로 위치와 형태를 그대로 유지하라.
이번 구간의 목표 분량: 약 800자 (공백 포함).
분량은 사건 사이의 감각·행동·내면으로만 채워라. 이미 쓴 대사·행동·문장을 되풀이해 채우지 마라. 채울 재료가 없으면 목표에 못 미친 채 끝내는 쪽이 낫다.
설명이나 머리말 없이 완성된 본문만 한국어로 출력하라.
서술은 과거형으로 쓰고 한 장면 안에서 시제를 섞지 마라. 대사 안의 시제는 인물의 말이므로 예외다.
대사는 곡선 큰따옴표(“ ”)로 감싸라. 직선 따옴표나 다른 기호로 대신하지 마라.
대사나 행동으로 이미 드러난 감정·의미를 뒤이은 서술로 다시 설명하지 마라. 해석은 독자 몫으로 남겨라.
같은 심상·소재(예: 흐릿한 길, 문틈)는 물론 같은 대사·후렴구·문장도 장면 전체에서 3회를 넘겨 반복하지 마라.
다음 상투 표현은 쓰지 말고 그 인물만의 구체적 반응으로 대체하라: 어깨가 떨렸다, 눈물이 뺨을 타고 흘렀다, 이를 악물었다, 눈썹이 떨렸다, 입술을 깨물었다, 심장이 내려앉았다.
위로하거나 조언하는 인물도 자기 목적이나 결점을 최소 한 번 드러내라. 조언만 하는 장치가 되지 않게 하라.
동작·전투·추격 대목은 무엇이 무엇을 어떻게 했는지 한 번에 읽히게 써라. 한 동작과 그 결과를 붙여 쓰고, 회상이나 비유로 동작 사이를 끊지 마라.
동시에 그 대목을 건조한 중계로 만들지 마라. 이 합에서 무엇이 걸려 있는지, 빗나가면 무엇을 잃는지 시점 인물의 몸이 먼저 알아채게 하고, 상대의 반응과 판단이 바뀌는 순간을 놓치지 마라. 승패를 가른 한 수는 그것이 왜 통했는지까지 드러나야 한다.
장면 전체의 밀도를 일정하게 유지하지 마라. 위기가 조여드는 대목은 문장을 짧게 끊어 호흡을 몰고, 인물이 머무르거나 정서가 쌓이는 대목에서는 묘사를 두텁게 하라. 문장 길이의 완급 자체가 긴장을 만든다.",
  "user": "[장면 전체 뼈대]
뼈대

[이번 구간 — 이 부분만 확장하라]
구간",
}
`;

exports[`SceneSectionExpansionPrompt golden > leaves optional blocks out for the xs variant 1`] = `
{
  "system": "뼈대의 [이번 구간]만 소설 본문으로 확장하라. 사건·대사·등장은 그대로, 묘사만 추가. 한국어 본문만 출력.",
  "user": "[장면 전체 뼈대]
뼈대

[이번 구간 — 이 부분만 확장하라]
구간",
}
`;

exports[`SceneSectionExpansionPrompt golden > leaves optional blocks out for the xs variant 2`] = `
{
  "system": "뼈대의 [이번 구간]만 소설 본문으로 확장하라. 사건·대사·등장은 그대로, 묘사만 추가. 한국어 본문만 출력.",
  "user": "[장면 전체 뼈대]
뼈대

[이번 구간 — 이 부분만 확장하라]
구간",
}
`;

exports[`SceneSectionExpansionPrompt golden > renders every block for the generic variant 1`] = `
{
  "system": "장면의 뼈대 가운데 [이번 구간]만 완성된 소설 본문으로 살을 붙여라.
뼈대에 적힌 사건·대사·등장 순서는 하나도 바꾸지 마라. 사건을 더하거나 빼지 말고, 뼈대에 없는 인물을 등장시키지 마라.
뼈대의 따옴표 대사는 그대로 살리되, 그 사이를 감각 묘사·행동·내면으로 채워 장면을 완성하라.
[장면 전체 뼈대]는 앞뒤 맥락을 알기 위한 참고다. 이번 구간 밖의 사건은 쓰지 마라.
[직전 구간]이 있으면 그 문체와 호흡을 이어받고, 이미 묘사된 공간·인물을 다시 소개하지 마라.
뼈대에 단독 줄로 --- 가 있으면 장면 전환 표시이므로 위치와 형태를 그대로 유지하라.
이번 구간의 목표 분량: 약 1,500자 (공백 포함).
분량은 사건 사이의 감각·행동·내면으로만 채워라. 이미 쓴 대사·행동·문장을 되풀이해 채우지 마라. 채울 재료가 없으면 목표에 못 미친 채 끝내는 쪽이 낫다.
설명이나 머리말 없이 완성된 본문만 한국어로 출력하라.
서술은 현재형으로 쓰고 한 장면 안에서 시제를 섞지 마라. 대사 안의 시제는 인물의 말이므로 예외다.
대사는 곡선 큰따옴표(“ ”)로 감싸라. 직선 따옴표나 다른 기호로 대신하지 마라.
서술 시점: 1인칭 — 화자가 자신을 '나'로 부르는 1인칭으로 처음부터 끝까지 유지하라.
서술자가 직접 보거나 듣거나 겪은 것만 서술하라. 그 자리에 없던 사건과 다른 인물의 속마음은 겉으로 드러난 행동·표정·말로만 전하고, 서술자가 알 수 없는 사실을 단정하지 마라.
서술자의 목소리: 건조함 — 서술 문장이 이 목소리를 유지하게 하라.
장르·톤: 스릴러
문체 제약: 짧은 문장
작품 금지 규칙 — 어떤 장면에서도 위반하지 마라: 욕설
이 장면의 시점 인물: 하나 — 이 인물의 지각과 내면만 서술하고, 다른 인물의 속마음은 겉으로 드러난 행동·표정으로만 전하라.
이 장면의 인물 관계 단계: 경계 — 이 단계에 맞는 태도와 거리감으로 표현하라.
같은 심상·소재(예: 흐릿한 길, 문틈)는 물론 같은 대사·후렴구·문장도 장면 전체에서 2회를 넘겨 반복하지 마라.
위로하거나 조언하는 인물도 자기 목적이나 결점을 최소 한 번 드러내라. 조언만 하는 장치가 되지 않게 하라.
동작·전투·추격 대목은 무엇이 무엇을 어떻게 했는지 한 번에 읽히게 써라. 한 동작과 그 결과를 붙여 쓰고, 회상이나 비유로 동작 사이를 끊지 마라.
동시에 그 대목을 건조한 중계로 만들지 마라. 이 합에서 무엇이 걸려 있는지, 빗나가면 무엇을 잃는지 시점 인물의 몸이 먼저 알아채게 하고, 상대의 반응과 판단이 바뀌는 순간을 놓치지 마라. 승패를 가른 한 수는 그것이 왜 통했는지까지 드러나야 한다.
장면 전체의 밀도를 일정하게 유지하지 마라. 위기가 조여드는 대목은 문장을 짧게 끊어 호흡을 몰고, 인물이 머무르거나 정서가 쌓이는 대목에서는 묘사를 두텁게 하라. 문장 길이의 완급 자체가 긴장을 만든다.
앞서 쓴 결과가 다음 이유로 반려됐다. 이번에는 어기지 마라: 대사 반복 / 분량 부족",
  "user": "[장면 전체 뼈대]
하나가 문을 연다.
---
준이 들어온다.

[직전 구간 — 이미 완성됨]
하나는 문고리를 잡았다.

[이번 구간 — 이 부분만 확장하라]
준이 들어온다.",
}
`;

exports[`SceneSectionExpansionPrompt golden > renders every block for the rich variant 1`] = `
{
  "system": "장면의 뼈대 가운데 [이번 구간]만 완성된 소설 본문으로 살을 붙여라.
뼈대에 적힌 사건·대사·등장 순서는 하나도 바꾸지 마라. 사건을 더하거나 빼지 말고, 뼈대에 없는 인물을 등장시키지 마라.
뼈대의 따옴표 대사는 그대로 살리되, 그 사이를 감각 묘사·행동·내면으로 채워 장면을 완성하라.
[장면 전체 뼈대]는 앞뒤 맥락을 알기 위한 참고다. 이번 구간 밖의 사건은 쓰지 마라.
[직전 구간]이 있으면 그 문체와 호흡을 이어받고, 이미 묘사된 공간·인물을 다시 소개하지 마라.
뼈대에 단독 줄로 --- 가 있으면 장면 전환 표시이므로 위치와 형태를 그대로 유지하라.
이번 구간의 목표 분량: 약 1,500자 (공백 포함).
분량은 사건 사이의 감각·행동·내면으로만 채워라. 이미 쓴 대사·행동·문장을 되풀이해 채우지 마라. 채울 재료가 없으면 목표에 못 미친 채 끝내는 쪽이 낫다.
설명이나 머리말 없이 완성된 본문만 한국어로 출력하라.
서술은 현재형으로 쓰고 한 장면 안에서 시제를 섞지 마라. 대사 안의 시제는 인물의 말이므로 예외다.
대사는 곡선 큰따옴표(“ ”)로 감싸라. 직선 따옴표나 다른 기호로 대신하지 마라.
서술 시점: 1인칭 — 화자가 자신을 '나'로 부르는 1인칭으로 처음부터 끝까지 유지하라.
서술자가 직접 보거나 듣거나 겪은 것만 서술하라. 그 자리에 없던 사건과 다른 인물의 속마음은 겉으로 드러난 행동·표정·말로만 전하고, 서술자가 알 수 없는 사실을 단정하지 마라.
서술자의 목소리: 건조함 — 서술 문장이 이 목소리를 유지하게 하라.
장르·톤: 스릴러
문체 제약: 짧은 문장
작품 금지 규칙 — 어떤 장면에서도 위반하지 마라: 욕설
이 장면의 시점 인물: 하나 — 이 인물의 지각과 내면만 서술하고, 다른 인물의 속마음은 겉으로 드러난 행동·표정으로만 전하라.
이 장면의 인물 관계 단계: 경계 — 이 단계에 맞는 태도와 거리감으로 표현하라.
같은 심상·소재(예: 흐릿한 길, 문틈)는 물론 같은 대사·후렴구·문장도 장면 전체에서 2회를 넘겨 반복하지 마라.
위로하거나 조언하는 인물도 자기 목적이나 결점을 최소 한 번 드러내라. 조언만 하는 장치가 되지 않게 하라.
동작·전투·추격 대목은 무엇이 무엇을 어떻게 했는지 한 번에 읽히게 써라. 한 동작과 그 결과를 붙여 쓰고, 회상이나 비유로 동작 사이를 끊지 마라.
동시에 그 대목을 건조한 중계로 만들지 마라. 이 합에서 무엇이 걸려 있는지, 빗나가면 무엇을 잃는지 시점 인물의 몸이 먼저 알아채게 하고, 상대의 반응과 판단이 바뀌는 순간을 놓치지 마라. 승패를 가른 한 수는 그것이 왜 통했는지까지 드러나야 한다.
장면 전체의 밀도를 일정하게 유지하지 마라. 위기가 조여드는 대목은 문장을 짧게 끊어 호흡을 몰고, 인물이 머무르거나 정서가 쌓이는 대목에서는 묘사를 두텁게 하라. 문장 길이의 완급 자체가 긴장을 만든다.
앞서 쓴 결과가 다음 이유로 반려됐다. 이번에는 어기지 마라: 대사 반복 / 분량 부족",
  "user": "[장면 전체 뼈대]
하나가 문을 연다.
---
준이 들어온다.

[직전 구간 — 이미 완성됨]
하나는 문고리를 잡았다.

[이번 구간 — 이 부분만 확장하라]
준이 들어온다.",
}
`;

exports[`SceneSectionExpansionPrompt golden > renders every block for the xs variant 1`] = `
{
  "system": "뼈대의 [이번 구간]만 소설 본문으로 확장하라. 사건·대사·등장은 그대로, 묘사만 추가. 한국어 본문만 출력.",
  "user": "[장면 전체 뼈대]
하나가 문을 연다.
---
준이 들어온다.

[직전 구간 — 이미 완성됨]
하나는 문고리를 잡았다.

[이번 구간 — 이 부분만 확장하라]
준이 들어온다.",
}
`;
